# lcars-dev

./: .gitignore  README.md  pyproject.toml
lcars/: __init__.py  version.json
lcars/cli/: __init__.py  main.py
lcars/cli/ui/: __init__.py  loading.py  render.py  theme.py
lcars/core/: __init__.py  catalog.py  config.py  models.py  paths.py  versioning.py
lcars/modules/: __init__.py
lcars/modules/discord/: __init__.py  bot.py
lcars/systems/: __init__.py  bot_runtime.py  doctor.py  installer.py  monitoring.py  service.py  updater.py
lcars/utils/: __init__.py  files.py  time.py
scripts/: install.sh  uninstall-legacy.sh  uninstall.sh
tests/: conftest.py  test_cli.py  test_config.py  test_doctor.py  test_monitoring.py  test_service.py  test_versioning.py
