[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lcars"
version = "1.0.0"
description = "LCARS control interface CLI and Discord bot."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1,<9.0",
    "discord.py>=2.4,<3.0",
    "psutil>=5.9,<8.0",
    "rich>=13.9,<15.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.10,<25.0",
    "pytest>=8.3,<9.0",
    "ruff>=0.11,<1.0",
]

[project.scripts]
lcars = "lcars.cli.main:main"

[tool.setuptools.packages.find]
include = ["lcars*"]

[tool.setuptools.package-data]
lcars = ["version.json"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
